# SimpleLists

./: CMakeLists.txt  Collector.h  List.h  list.cpp  list.h  main.cpp
List/: Collector.cpp  Collector.h  List.cpp  List.h  ListTests.cpp  ListTests.h  Node.cpp  Node.h  main.cpp
Tests/: SimpleListTest.cpp  SimpleListTest.h
